--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -61,7 +61,7 @@
                             </div>
                             <div class="description">
                                 <h4 class="info-title">New Ideas</h4>
-                                <p>顧客ベネフィット1顧客ベネフィット1顧客ベネフィット1</p>
+                                <p>{{ rental.appeal1 }}</p>
                                 <a href="#pkp" class="btn btn-link btn-danger">See more</a>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                             </div>
                             <div class="description">
                                 <h4 class="info-title">Statistics</h4>
-                                <p>顧客ベネフィット2顧客ベネフィット2顧客ベネフィット2</p>
+                                <p>{{ rental.appeal2 }}</p>
                                 <a href="#pkp" class="btn btn-link btn-danger">See more</a>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                             </div>
                             <div class="description">
                                 <h4 class="info-title">Delightful design</h4>
-                                <p>顧客ベネフィット3顧客ベネフィット3顧客ベネフィット3</p>
+                                <p>{{ rental.appeal3 }}</p>
                                 <a href="#pkp" class="btn btn-link btn-danger">See more</a>
                             </div>
                         </div>
