--- a/src/app/rental/rental-manage/rental-manage.component.html
+++ b/src/app/rental/rental-manage/rental-manage.component.html
@@ -27,9 +27,10 @@
                   <label class="label label-warning">{{rental.province}}</label>
                   <h5 class="card-title">{{rental.rentalname}} Trainer</h5>
                   <div class="card-description">
+                    <p><button class="btn btn-info" routerLink="/rentals/{{rental._id}}/edit">商品編集</button></p>
+                    <p><button class="btn btn-info" routerLink="/rentals/{{rental._id}}/editschedule">受付時間</button></p>
                     <!-- <p><button class="btn btn-danger" routerLink="/rentals/manage/revenue/{{rental._id}}">この商品の売上</button></p> -->
                     <!-- <p><button class="btn btn-danger" routerLink="/rentals/manage/bookings/{{rental._id}}">確定予約の確認</button></p> -->
-                    <p><button class="btn btn-info" routerLink="/rentals/{{rental._id}}/editschedule">受付日時の設定</button></p>
                     <!-- <p><button class="btn btn-sm btn-wd btn-danger btn-round">Delete</button></p> -->
                     <!-- <hr> -->
                   </div>
