--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,23 +1,18 @@
 <section id="login">
     <div class="wrapper">
-      <div class="page-header section-dark" style="background-image: url('./assets/img/top-banner.jpg');">
+      <div class="page-header section-dark" style="background-image: url('./assets/img/airbridal-login2.jpg');">
         <div class="filter"></div>
           <div class="container">
-            <div class="space-110"></div>
+            <!-- <div class="space-70"></div> -->
             <div class="row">
               <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                 <div class="card card-register">
-                  <h3 class="title">Login with</h3>
-                  <div class="social-line text-center">
+                  <h3 class="title">Login</h3>
+                  <br>
+                  <!-- <div class="social-line text-center">
                     <button class="btn btn-neutral btn-facebook btn-just-icon" (click)="signInWithFB()">
                       <i class="fa fa-facebook-square"></i>
                     </button>
-                    <!-- <a href="#pablo" class="btn btn-neutral btn-google btn-just-icon">
-                      <i class="fa fa-google-plus"></i>
-                    </a>
-                    <a href="#pablo" class="btn btn-neutral btn-twitter btn-just-icon">
-                      <i class="fa fa-twitter"></i>
-                    </a> -->
                   </div>
                   <br>
                   <div *ngIf="isFBloggedIn && errors.length > 0" class="alert alert-danger">
@@ -28,7 +23,7 @@
                       <div class="line l"></div>
                       <span>or</span>
                       <div class="line r"></div>
-                  </div>
+                  </div> -->
     
                   <div *ngIf="!isFBloggedIn && errors.length > 0" class="alert alert-danger">
                     <p *ngFor="let error of errors">{{error.detail}}</p>
@@ -61,19 +56,19 @@
                                 class="form-control"
                                 id="password"
                                 formControlName="password"
-                                placeholder="Password" (focus)="focus1=true" (blur)="focus1=false">
+                                placeholder="パスワード" (focus)="focus1=true" (blur)="focus1=false">
                       </div>
                     </div>
-                    <button [disabled]="!loginForm.valid" type="submit" class="btn btn-danger btn-block btn-round">Login</button>
+                    <button [disabled]="!loginForm.valid" type="submit" class="btn btn-danger btn-block btn-round btn-lg">ログイン</button>
                   </form>
-                  <div class="forgot">
+                  <!-- <div class="forgot">
                     <a routerLink="/login/reset" class="btn btn-link btn-danger">Forgot password?</a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
             <div class="footer register-footer text-center">
-              <h6>&copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Aeru.me, Inc</h6>
+              <h6>&copy;{{footer | date: 'yyyy'}}, AIRBRIDAL,Inc made with <i class="fa fa-heart heart"></i> Aeru.me</h6>
             </div>
           </div>
         </div>
