--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -37,9 +37,9 @@
                         </a>
                     </li> -->
         
-                    <li class="nav-item" *ngIf="!isDocumentation()">
+                    <!-- <li class="nav-item" *ngIf="!isDocumentation()">
                         <a [routerLink]="['/register']" class="nav-link"><i class="nc-icon nc-book-bookmark"></i> 会員登録する</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item" *ngIf="isHome()">
                         <a [routerLink]="['/login']" class="btn btn-round btn-danger"><i class="nc-icon nc-key-25"></i> Login</a>
                     </li>
@@ -56,10 +56,10 @@
                         <div ngbDropdown class="nav-item dropdown clickable">
                             <div ngbDropdownToggle class="nav-link dropdown-toggle"><i class="nc-icon nc-single-02"></i>&nbsp; オーナー機能</div>
                             <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right dropdown-danger">
-                                <a class="dropdown-item" [routerLink]="['/rentals/manage/incoming']"><i class="nc-icon nc-bell-55"></i>&nbsp; 予約リクエスト管理</a>
-                                <a class="dropdown-item" [routerLink]="['/rentals/manage/bookings']"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; 予約確定した商品</a>
+                                <!-- <a class="dropdown-item" [routerLink]="['/rentals/manage/incoming']"><i class="nc-icon nc-bell-55"></i>&nbsp; 予約リクエスト管理</a> -->
+                                <!-- <a class="dropdown-item" [routerLink]="['/rentals/manage/bookings']"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; 予約確定した商品</a> -->
                                 <a class="dropdown-item" [routerLink]="['/rentals/manage']"><i class="nc-icon nc-album-2"></i>&nbsp; 商品管理</a>
-                                <a class="dropdown-item" [routerLink]="['/rentals/revenue']"><i class="nc-icon nc-chart-bar-32"></i>&nbsp; 収益レポート</a>
+                                <!-- <a class="dropdown-item" [routerLink]="['/rentals/revenue']"><i class="nc-icon nc-chart-bar-32"></i>&nbsp; 収益レポート</a> -->
                                 <!-- <a class="dropdown-item" [routerLink]="['/rentals/new']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 物件の追加</a> -->
                             </div>
                         </div>
@@ -67,9 +67,10 @@
                     <div ngbDropdown class="nav-item dropdown clickable">
                         <div ngbDropdownToggle class="nav-link dropdown-toggle"><i class="nc-icon nc-single-02"></i>&nbsp; {{auth.getUsername()}}さん</div>
                         <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right dropdown-danger">
-                            <a class="dropdown-item" [routerLink]="['/user/pending']"><i class="nc-icon nc-bell-55"></i>&nbsp; 日時調整中の予約</a>
-                            <a class="dropdown-item" [routerLink]="['/user/mybookings']"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; 日時確定した予約</a>
-                            <a class="dropdown-item" [routerLink]="['/user/settings']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 設定</a>
+                            <!-- <a class="dropdown-item" [routerLink]="['/user/favourite']"><i class="nc-icon nc-favourite-28"></i>&nbsp; お気に入り管理</a> -->
+                            <!-- <a class="dropdown-item" [routerLink]="['/user/pending']"><i class="nc-icon nc-bell-55"></i>&nbsp; 日時調整中の予約</a> -->
+                            <!-- <a class="dropdown-item" [routerLink]="['/user/mybookings']"><i class="nc-icon nc-bullet-list-67"></i>&nbsp; 日時確定した予約</a> -->
+                            <!-- <a class="dropdown-item" [routerLink]="['/user/settings']"><i class="nc-icon nc-settings-gear-65"></i>&nbsp; 設定</a> -->
                         </div>
                     </div>
                     <li class="nav-item clickable">
