--- a/src/app/rental/rental-edit/rental-edit.component.html
+++ b/src/app/rental/rental-edit/rental-edit.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="page-header page-header-xs settings-background" style="background-image: url('./assets/img/joshua-earlez.jpg')">
+    <div class="page-header page-header-xs settings-background" [ngStyle]="{'background-image' : 'url(' + rental.image + ')' }">
         <div class="filter"></div>
     </div>
     <div class="profile-content section">
@@ -90,6 +90,10 @@
                                 rows="3" 
                                 maxlength="150" ></textarea>
                             <h5><small><span id="textarea-limited-message" class="pull-right">残文字数 {{ 150 - rental.course90Description.length }}</span></small></h5>
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="text" class="form-control border-input" placeholder="フォームからの連絡用アドレスを入力" [(ngModel)]="rental.email" name="email" required>
                         </div>
                         
                         <div class="space-top"></div>
