add create rental feature

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -55,7 +55,7 @@
                             <div class="links">
                                 <ul class="uppercase-links stacked-links">
                                     <li>
-                                        <a routerLink="/faq">
+                                        <a routerLink="/">
                                            ウエディング事業者様
                                         </a>
                                     </li>
