--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -68,7 +68,7 @@
               </div>
             </div>
             <div class="footer register-footer text-center">
-              <h6>&copy;{{footer | date: 'yyyy'}}, AIRBRIDAL,Inc made with <i class="fa fa-heart heart"></i> Aeru.me</h6>
+              <h6>&copy;{{footer | date: 'yyyy'}}, AIRBRIDAL, Inc. made with <i class="fa fa-heart heart"></i>by Aeru.me</h6>
             </div>
           </div>
         </div>
