--- a/src/app/rental/rental-create/rental-create.component.html
+++ b/src/app/rental/rental-create/rental-create.component.html
@@ -1,21 +1,171 @@
 <section id="newRental">
-  <div class="bwm-form">
+  <div class="container">
     <div class="row">
       <div class="col-md-5">
-        <h2>Register your product</h2>
-        <form #rentalForm="ngForm">
+        <h2>商品登録ページ</h2>
+        <div class="space-top"></div>
+        <form #rentalForm="ngForm" (ngSubmit)="createRental(rentalForm)">
         <!--<form [formGroup]="myGroup" action="" method="">-->
           <div class="form-group">
-            <label for="rentalname">商品の名前</label>
+            <label for="rentalname">商品名</label>
             <input [(ngModel)]="newRental.rentalname"
                    name="rentalname"
+                   id="rentalname"
                    type="text"
                    class="form-control"
-                   id="rentalname"
-                   required>
+                   placeholder="商品名" 
+                   maxlength="20" 
+                   required
+                   />
+            <h5><small><span id="textarea-limited-message" class="pull-right">
+              <div *ngIf="!newRental.rentalname">
+                残文字数 20
+              </div>
+              <div *ngIf="newRental.rentalname">
+                残文字数 {{ 20 - newRental.rentalname.length }}
+              </div>
+            </span></small></h5>
           </div>
 
           <div class="form-group">
+              <label>商品概要</label>
+              <textarea 
+                  [(ngModel)]="newRental.headlinedescription1" 
+                  name="headlinedescription1"
+                  class="form-control textarea-limited" 
+                  placeholder="ヘッダーカバーテキストを入力できます。" 
+                  rows="4" 
+                  maxlength="120" 
+                  ></textarea>
+              <h5><small><span id="textarea-limited-message" class="pull-right">
+                  <div *ngIf="!newRental.headlinedescription1">
+                      残文字数 120
+                  </div>
+                  <div *ngIf="newRental.headlinedescription1">
+                      残文字数 {{ 120 - newRental.headlinedescription1.length }}
+                  </div>
+              </span></small></h5>
+          </div>
+
+          <div class="form-group">
+              <label>挨拶文</label>
+              <textarea
+                  [(ngModel)]="newRental.description" 
+                  name="description"
+                  class="form-control textarea-limited" 
+                  placeholder="紹介文を入力できます." 
+                  rows="4" 
+                  maxlength="120"
+                  required
+                  ></textarea>
+              <h5><small><span id="textarea-limited-message" class="pull-right">
+                <div *ngIf="!newRental.description">
+                    残文字数 120
+                </div>
+                <div *ngIf="newRental.description">
+                    残文字数 {{ 120 - newRental.description.length }}
+                </div>
+              </span></small></h5>
+          </div>
+
+          <div class="form-group">
+              <label>ベネフィット１</label>
+              <input type="text" class="form-control border-input" placeholder="ベネフィット文章１" [(ngModel)]="newRental.appeal1" name="appeal1" required>
+          </div>
+          <div class="form-group">
+              <label>ベネフィット２</label>
+              <input type="text" class="form-control border-input" placeholder="ベネフィット文章２" [(ngModel)]="newRental.appeal2" name="appeal2" required>
+          </div>
+          <div class="form-group">
+              <label>ベネフィット３</label>
+              <input type="text" class="form-control border-input" placeholder="ベネフィット文章３" [(ngModel)]="newRental.appeal3" name="appeal3" required>
+          </div>
+
+          <div class="form-group">
+              <label>Course 60 description</label>
+              <textarea 
+                  class="form-control textarea-limited" 
+                  placeholder="紹介文を入力できます" 
+                  [(ngModel)]="newRental.course60Description" 
+                  name="course60Description"
+                  rows="3" 
+                  maxlength="150" ></textarea>
+              <h5><small><span id="textarea-limited-message" class="pull-right">
+                <div *ngIf="!newRental.description">
+                  残文字数 150
+                </div>
+                <div *ngIf="newRental.description">
+                  残文字数 {{ 150 - newRental.description.length }}
+                </div>
+              </span></small></h5>
+          </div>
+          <!-- <div class="form-group">
+              <label>90min images</label>
+              <input type="text" class="form-control border-input" placeholder="Email Address" [ngModel]="userData.email" name="email" required>
+          </div> -->
+          <div class="form-group">
+            <label>Course 90 description</label>
+            <textarea 
+                class="form-control textarea-limited" 
+                placeholder="紹介文を入力できます" 
+                [(ngModel)]="newRental.course90Description" 
+                name="course90Description"
+                rows="3" 
+                maxlength="150" ></textarea>
+            <h5><small><span id="textarea-limited-message" class="pull-right">
+              <div *ngIf="!newRental.description">
+                残文字数 150
+              </div>
+              <div *ngIf="newRental.description">
+                残文字数 {{ 150 - newRental.description.length }}
+              </div>
+            </span></small></h5>
+          </div>
+          <div class="form-group">
+              <label>Email</label>
+              <input type="text" class="form-control border-input" placeholder="フォームからの連絡用アドレスを入力" [(ngModel)]="newRental.email" name="email" required>
+          </div>
+          <div class="form-group">
+              <label>HP（任意）</label>
+              <input type="text" class="form-control border-input" placeholder="HPのURLが入力できます" [(ngModel)]="newRental.homepage" name="homepage">
+          </div>
+          <div class="form-group">
+              <label>Facebook（任意）</label>
+              <input type="text" class="form-control border-input" placeholder="FacebookURLが入力できます" [(ngModel)]="newRental.facebook" name="facebook">
+          </div>
+          <div class="form-group">
+              <label>Instagram（任意）</label>
+              <input type="text" class="form-control border-input" placeholder="InstagramURLが入力できます" [(ngModel)]="newRental.instagram" name="instagram">
+          </div>
+          <div class="form-group">
+              <label>Twitter（任意）</label>
+              <input type="text" class="form-control border-input" placeholder="TwitterURLが入力できます" [(ngModel)]="newRental.twitter" name="twitter">
+          </div>
+
+          <div class="space-top"></div>
+          <!-- <label>Notifications</label> -->
+          <ul class="notifications">
+              <li class="notification-item">
+                  外部公開 / 非公開
+                  <bSwitch
+                      [switch-on-color]="'info'"
+                      [switch-off-color]="'info'"
+                      [(ngModel)]="newRental.shared"
+                      name="shared">
+                  </bSwitch>
+              </li>
+              <!-- <li class="notification-item">
+                  Updates regarding product changes
+                  <bSwitch
+                      [switch-on-color]="'info'"
+                      [switch-off-color]="'info'"
+                      [(ngModel)]="state_info1"
+                      name="second_switch">
+                  </bSwitch>
+              </li> -->
+          </ul>
+
+          <!-- <div class="form-group">
             <label for="age">商品の年齢</label>
             <input [(ngModel)]="newRental.age"
                     name="age"
@@ -23,9 +173,9 @@
                     class="form-control"
                     id="age"
                     required>
-          </div>
+          </div> -->
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="height">商品の身長</label>
             <input [(ngModel)]="newRental.height"
                     name="height"
@@ -33,9 +183,9 @@
                     class="form-control"
                     id="height"
                     required>
-          </div>
+          </div> -->
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="bust">バストサイズ</label>
 
             <select class="form-control"
@@ -52,9 +202,9 @@
               <option> Hカップ </option>
               <option> Iカップ以上 </option>
             </select>
-          </div>
+          </div> -->
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="weight">体型</label>
 
             <select class="form-control"
@@ -66,7 +216,7 @@
               <option> 少しポチャ </option>
               <option> ポチャ </option>
             </select>
-          </div>
+          </div> -->
 
  <!--後で対応する
           <div class="form-group">
@@ -87,7 +237,7 @@
           </div>
           -->
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label for="province">活動エリア</label>
             <input [(ngModel)]="newRental.province"
                    name="province"
@@ -140,9 +290,10 @@
               <option> 非公開 </option>
               <option> 公開 </option>
             </select>
-          </div>
+          </div> -->
 
-          <button [disabled]="!rentalForm.form.valid" (click)="createRental()" type="submit" class="btn btn-bwm">Submit</button>
+          <button [disabled]="!rentalForm.form.valid" type="submit" class="btn btn-wd btn-danger">商品登録</button>
+
         </form>
         <div *ngIf="errors.length > 0" class="alert alert-danger">
           <p *ngFor="let error of errors">
@@ -150,10 +301,15 @@
           </p>
         </div>
       </div>
-      <div class="col-md-6 ml-auto">
+      <!-- <div class="col-md-6 ml-auto">
         <div class="image-container">
           <h2 class="catchphrase">Hundreds of awesome places in reach of few clicks.</h2>
-          <img src="assets/images/create-rental.jpg" alt="">
+          <img src="assets/img/airbridal-login2.jpg" alt="">
+        </div>
+      </div> -->
+      <div class="col-md-6 ml-auto">
+        <div class="card-image text-center space-top">
+          <img src="assets/img/create-rental-bg.jpg" alt="Rounded Image" class="img-rounded img-responsive">
         </div>
       </div>
     </div>
