--- a/src/app/rental/rental-list/rental-list-item/rental-list-item.component.html
+++ b/src/app/rental/rental-list/rental-list-item/rental-list-item.component.html
@@ -1,5 +1,5 @@
-<a routerLink="{{rental._id}}">
-  <div class="card">
+<div class="card">
+  <a routerLink="{{rental._id}}">
     <div class="card-image">
       <img class="img" src="{{rental.image}}">
     </div>
@@ -7,16 +7,20 @@
       <label class="label label-warning">{{ rental.province }}</label>
       <h5 class="card-title">{{ rental.rentalname }} Trainer</h5>
       <div class="card-description">{{ rental.cardDescription }}</div>
-      <hr />
-      <div class="card-footer">
-        <div class="author">
-          <!-- <img src="assets/img/rihanna.jpg" alt="..." class="avatar img-raised"> -->
-          <span>{{ rental.hourlyPrice }}JPY/HOUR</span>
-        </div>
-        <div class="stats">
-          <i class="fa fa-heart" aria-hidden="true"></i> 5.3k
-        </div>
-      </div>
+    </div>
+  </a>
+  <div class="card-footer">
+    <hr>
+    <div class="author">
+      <!-- <img src="assets/img/rihanna.jpg" alt="..." class="avatar img-raised"> -->
+      <span>{{ rental.hourlyPrice }}JPY/HOUR</span>
+    </div>
+    <div class="stats clickable">
+      <a (click)=toggleFavourite()>
+        <i *ngIf="isFavourite" class="fa fa-heart" aria-hidden="true"></i>
+        <i *ngIf="!isFavourite" class="fa fa-heart-o" aria-hidden="true"></i>
+        5.3k
+      </a>
     </div>
   </div>
-</a>
+</div>
