--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -15,11 +15,42 @@
   <div class="main">
     <div class="section text-center">
       <div class="container">
-        <div class="row">
-          <div class='col-md-3 col-xs-6' *ngFor="let rental of rentals">
-            <app-rental-list-item [rental]="rental"></app-rental-list-item>
-          </div>
+        <div class="tim-title">
+            <h2>Wedding</h2>
+            <div class="space-top"></div>
         </div>
+        <div class="row">
+          <ng-container *ngFor="let rental of rentals">
+            <div *ngIf="rental.selectedCategory && (rental.selectedCategory[0].id === 1)" class='col-md-3 col-xs-6'>
+              <app-rental-list-item [rental]="rental"></app-rental-list-item>
+            </div>
+          </ng-container>
+        </div>
+
+        <div class="tim-title">
+            <h2>BBBBB</h2>
+            <div class="space-top"></div>
+        </div>
+        <div class="row">
+          <ng-container *ngFor="let rental of rentals">
+            <div *ngIf="rental.selectedCategory && (rental.selectedCategory[0].id === 2)" class='col-md-3 col-xs-6'>
+              <app-rental-list-item [rental]="rental"></app-rental-list-item>
+            </div>
+          </ng-container>
+        </div>
+
+        <div class="tim-title">
+            <h2>CCCC</h2>
+            <div class="space-top"></div>
+        </div>
+        <div class="row">
+          <ng-container *ngFor="let rental of rentals">
+            <div *ngIf="rental.selectedCategory && (rental.selectedCategory[0].id === 3)" class='col-md-3 col-xs-6'>
+              <app-rental-list-item [rental]="rental"></app-rental-list-item>
+            </div>
+          </ng-container>
+        </div>
+
       </div>
     </div>
   </div>
