--- a/src/app/user/user-myfavourite/user-myfavourite.component.html
+++ b/src/app/user/user-myfavourite/user-myfavourite.component.html
@@ -13,11 +13,41 @@
   <div class="main">
     <div class="section text-center">
       <div class="container">
-          <div *ngIf="favouriteRentals" class="row">
-            <div class='col-md-3 col-xs-6' *ngFor="let favouriteRental of favouriteRentals">
+        <div class="tim-title">
+            <h2>Wedding</h2>
+            <div class="space-top"></div>
+        </div>
+        <div class="row">
+          <ng-container *ngFor="let favouriteRental of favouriteRentals">
+            <div *ngIf="favouriteRental.selectedCategory && (favouriteRental.selectedCategory[0].id === 1)" class='col-md-3 col-xs-6'>
               <app-myfavourite-list-item [rental]="favouriteRental"></app-myfavourite-list-item>
             </div>
-          </div>
+          </ng-container>
+        </div>
+
+        <div class="tim-title">
+            <h2>BBBBB</h2>
+            <div class="space-top"></div>
+        </div>
+        <div class="row">
+          <ng-container *ngFor="let favouriteRental of favouriteRentals">
+            <div *ngIf="favouriteRental.selectedCategory && (favouriteRental.selectedCategory[0].id === 2)" class='col-md-3 col-xs-6'>
+              <app-myfavourite-list-item [rental]="favouriteRental"></app-myfavourite-list-item>
+            </div>
+          </ng-container>
+        </div>
+
+        <div class="tim-title">
+            <h2>CCCC</h2>
+            <div class="space-top"></div>
+        </div>
+        <div class="row">
+          <ng-container *ngFor="let favouriteRental of favouriteRentals">
+            <div *ngIf="favouriteRental.selectedCategory && (favouriteRental.selectedCategory[0].id === 3)" class='col-md-3 col-xs-6'>
+              <app-myfavourite-list-item [rental]="favouriteRental"></app-myfavourite-list-item>
+            </div>
+          </ng-container>
+        </div>
       </div>
     </div>
   </div>
