--- a/src/app/rental/rental-edit/rental-edit.component.html
+++ b/src/app/rental/rental-edit/rental-edit.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" *ngIf="rental">
+<div class="wrapper">
     <div class="page-header page-header-xs settings-background" [ngStyle]="{'background-image' : 'url(' + rental.image + ')' }">
         <div class="filter"></div>
     </div>
@@ -114,6 +114,7 @@
                         <div class="form-group">
                             <label>Twitter</label>
                             <input type="text" class="form-control border-input" placeholder="TwitterURLが入力できます" [(ngModel)]="rental.twitter" name="twitter">
+                        </div>
 
                         <div class="form-group">
                             <label>カテゴリ</label>
