--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="tim-title">
-            <h2>BBBBB</h2>
+            <h2>Flower</h2>
             <div class="space-top"></div>
         </div>
         <div class="row">
@@ -39,7 +39,7 @@
         </div>
 
         <div class="tim-title">
-            <h2>CCCC</h2>
+            <h2>2nd party</h2>
             <div class="space-top"></div>
         </div>
         <div class="row">
