--- a/src/app/user/user-myfavourite/user-myfavourite.component.html
+++ b/src/app/user/user-myfavourite/user-myfavourite.component.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="tim-title">
-            <h2>BBBBB</h2>
+            <h2>Flower</h2>
             <div class="space-top"></div>
         </div>
         <div class="row">
@@ -38,7 +38,7 @@
         </div>
 
         <div class="tim-title">
-            <h2>CCCC</h2>
+            <h2>2nd party</h2>
             <div class="space-top"></div>
         </div>
         <div class="row">
