--- a/src/app/rental/rental-edit/rental-edit.component.html
+++ b/src/app/rental/rental-edit/rental-edit.component.html
@@ -122,6 +122,7 @@
                                                 [settings]="dropdownCategorySettings" 
                                                 [(ngModel)]="rental.selectedCategory"
                                                 name="selectedCategory"
+                                                required
                                                 ></angular2-multiselect>
                         </div>
                         
