--- a/src/app/rental/rental-new/rental-new.component.html
+++ b/src/app/rental/rental-new/rental-new.component.html
@@ -149,6 +149,7 @@
                                   [settings]="dropdownCategorySettings" 
                                   [(ngModel)]="newRental.selectedCategory"
                                   name="selectedCategory"
+                                  required
                                   ></angular2-multiselect>
           </div>
 
