--- a/src/app/rental/rental-list/rental-list.component.html
+++ b/src/app/rental/rental-list/rental-list.component.html
@@ -16,7 +16,7 @@
     <div class="section text-center">
       <div class="container">
         <div class="tim-title">
-            <h2>Wedding</h2>
+            <h2>Sport</h2>
             <div class="space-top"></div>
         </div>
         <div class="row">
@@ -28,7 +28,7 @@
         </div>
 
         <div class="tim-title">
-            <h2>BBBBB</h2>
+            <h2>Music</h2>
             <div class="space-top"></div>
         </div>
         <div class="row">
@@ -40,7 +40,7 @@
         </div>
 
         <div class="tim-title">
-            <h2>CCCC</h2>
+            <h2>Others</h2>
             <div class="space-top"></div>
         </div>
         <div class="row">
