--- a/src/app/rental/rental-new/rental-new.component.html
+++ b/src/app/rental/rental-new/rental-new.component.html
@@ -8,7 +8,30 @@
         <form #rentalForm="ngForm" (ngSubmit)="createRental(rentalForm)">
         <!--<form [formGroup]="myGroup" action="" method="">-->
           <div class="form-group">
-            <label for="rentalname">商品名</label>
+              <label>カバー写真</label>
+              <div class="row">
+                  <div class="col-md-10 ml-auto mr-auto">
+                      <!-- <app-image-upload></app-image-upload> -->
+                      <app-image-upload-myver 
+                          (imageUploaded)="newRental.image=$event"
+                          >
+                      </app-image-upload-myver>
+                  </div>
+              </div>
+          </div>
+
+          <div class="form-group">
+            <label>カテゴリ（必須）</label>
+            <angular2-multiselect [data]="dropdownCategoryList" 
+                                [settings]="dropdownCategorySettings" 
+                                [(ngModel)]="newRental.selectedCategory"
+                                name="selectedCategory"
+                                required
+                                ></angular2-multiselect>
+          </div>
+
+          <div class="form-group">
+            <label for="rentalname">商品名（必須）</label>
             <input [(ngModel)]="newRental.rentalname"
                    name="rentalname"
                    id="rentalname"
@@ -29,7 +52,28 @@
           </div>
 
           <div class="form-group">
-              <label>商品概要</label>
+            <label for="rentalname">表の商品カード文言（必須）</label>
+            <input [(ngModel)]="newRental.cardDescription"
+                   name="cardDescription"
+                   id="cardDescription"
+                   type="text"
+                   class="form-control"
+                   placeholder="表の商品カード文言" 
+                   maxlength="20" 
+                   required
+                   />
+            <h5><small><span id="textarea-limited-message" class="pull-right">
+              <div *ngIf="!newRental.cardDescription">
+                残文字数 20
+              </div>
+              <div *ngIf="newRental.cardDescription">
+                残文字数 {{ 20 - newRental.cardDescription.length }}
+              </div>
+            </span></small></h5>
+          </div>
+
+          <div class="form-group">
+              <label>商品概要（必須）</label>
               <textarea 
                   [(ngModel)]="newRental.headlinedescription1" 
                   name="headlinedescription1"
@@ -37,6 +81,7 @@
                   placeholder="ヘッダーカバーテキストを入力できます。" 
                   rows="4" 
                   maxlength="120" 
+                  required
                   ></textarea>
               <h5><small><span id="textarea-limited-message" class="pull-right">
                   <div *ngIf="!newRental.headlinedescription1">
@@ -49,7 +94,7 @@
           </div>
 
           <div class="form-group">
-              <label>挨拶文</label>
+              <label>挨拶文（必須）</label>
               <textarea
                   [(ngModel)]="newRental.description" 
                   name="description"
@@ -71,26 +116,28 @@
 
           <div class="form-group">
               <label>ベネフィット１</label>
-              <input type="text" class="form-control border-input" placeholder="ベネフィット文章１" [(ngModel)]="newRental.appeal1" name="appeal1" required>
+              <input type="text" class="form-control border-input" placeholder="ベネフィット文章１" [(ngModel)]="newRental.appeal1" name="appeal1">
           </div>
           <div class="form-group">
               <label>ベネフィット２</label>
-              <input type="text" class="form-control border-input" placeholder="ベネフィット文章２" [(ngModel)]="newRental.appeal2" name="appeal2" required>
+              <input type="text" class="form-control border-input" placeholder="ベネフィット文章２" [(ngModel)]="newRental.appeal2" name="appeal2">
           </div>
           <div class="form-group">
               <label>ベネフィット３</label>
-              <input type="text" class="form-control border-input" placeholder="ベネフィット文章３" [(ngModel)]="newRental.appeal3" name="appeal3" required>
+              <input type="text" class="form-control border-input" placeholder="ベネフィット文章３" [(ngModel)]="newRental.appeal3" name="appeal3">
           </div>
 
           <div class="form-group">
-              <label>Course 60 description</label>
+              <label>Course 60 description（必須）</label>
               <textarea 
                   class="form-control textarea-limited" 
                   placeholder="紹介文を入力できます" 
                   [(ngModel)]="newRental.course60Description" 
                   name="course60Description"
                   rows="3" 
-                  maxlength="150" ></textarea>
+                  maxlength="150" 
+                  required
+                  ></textarea>
               <h5><small><span id="textarea-limited-message" class="pull-right">
                 <div *ngIf="!newRental.description">
                   残文字数 150
@@ -100,19 +147,30 @@
                 </div>
               </span></small></h5>
           </div>
-          <!-- <div class="form-group">
-              <label>90min images</label>
-              <input type="text" class="form-control border-input" placeholder="Email Address" [ngModel]="userData.email" name="email" required>
-          </div> -->
+
           <div class="form-group">
-            <label>Course 90 description</label>
+              <label>90min image</label>
+              <div class="row">
+                  <div class="col-md-10 ml-auto mr-auto">
+                      <!-- <app-image-upload></app-image-upload> -->
+                      <app-image-upload-myver 
+                          (imageUploaded)="newRental.course90img=$event"
+                          >
+                      </app-image-upload-myver>
+                  </div>
+              </div>
+          </div>
+          <div class="form-group">
+            <label>Course 90 description（必須）</label>
             <textarea 
                 class="form-control textarea-limited" 
                 placeholder="紹介文を入力できます" 
                 [(ngModel)]="newRental.course90Description" 
                 name="course90Description"
                 rows="3" 
-                maxlength="150" ></textarea>
+                maxlength="150" 
+                required
+                ></textarea>
             <h5><small><span id="textarea-limited-message" class="pull-right">
               <div *ngIf="!newRental.description">
                 残文字数 150
@@ -122,8 +180,69 @@
               </div>
             </span></small></h5>
           </div>
+
           <div class="form-group">
-              <label>Email</label>
+              <label>Garally image 1</label>
+              <div class="row">
+                  <div class="col-md-10 ml-auto mr-auto">
+                      <!-- <app-image-upload></app-image-upload> -->
+                      <app-image-upload-myver 
+                          (imageUploaded)="newRental.gallery=$event"
+                          >
+                      </app-image-upload-myver>
+                  </div>
+              </div>
+          </div>
+          <div class="form-group">
+              <label>Garally image 2</label>
+              <div class="row">
+                  <div class="col-md-10 ml-auto mr-auto">
+                      <!-- <app-image-upload></app-image-upload> -->
+                      <app-image-upload-myver 
+                        (imageUploaded)="newRental.gallery2=$event"
+                        >
+                      </app-image-upload-myver>
+                  </div>
+              </div>
+          </div>
+          <div class="form-group">
+              <label>Garally image 3</label>
+              <div class="row">
+                  <div class="col-md-10 ml-auto mr-auto">
+                      <!-- <app-image-upload></app-image-upload> -->
+                      <app-image-upload-myver 
+                        (imageUploaded)="newRental.gallery3=$event"
+                        >
+                      </app-image-upload-myver>
+                  </div>
+              </div>
+          </div>
+          <div class="form-group">
+              <label>Garally image 4</label>
+              <div class="row">
+                  <div class="col-md-10 ml-auto mr-auto">
+                      <!-- <app-image-upload></app-image-upload> -->
+                      <app-image-upload-myver 
+                        (imageUploaded)="newRental.gallery4=$event"
+                        >
+                      </app-image-upload-myver>
+                  </div>
+              </div>
+          </div>
+          <div class="form-group">
+              <label>Garally image 5</label>
+              <div class="row">
+                  <div class="col-md-10 ml-auto mr-auto">
+                      <!-- <app-image-upload></app-image-upload> -->
+                      <app-image-upload-myver 
+                        (imageUploaded)="newRental.gallery5=$event"
+                        >
+                      </app-image-upload-myver>
+                  </div>
+              </div>
+          </div>
+          <div class="form-group">
+              <label>Email（必須）</label>
               <input type="text" class="form-control border-input" placeholder="フォームからの連絡用アドレスを入力" [(ngModel)]="newRental.email" name="email" required>
           </div>
           <div class="form-group">
@@ -141,16 +260,6 @@
           <div class="form-group">
               <label>Twitter（任意）</label>
               <input type="text" class="form-control border-input" placeholder="TwitterURLが入力できます" [(ngModel)]="newRental.twitter" name="twitter">
-          </div>
-
-          <div class="form-group">
-              <label>カテゴリ</label>
-              <angular2-multiselect [data]="dropdownCategoryList" 
-                                  [settings]="dropdownCategorySettings" 
-                                  [(ngModel)]="newRental.selectedCategory"
-                                  name="selectedCategory"
-                                  required
-                                  ></angular2-multiselect>
           </div>
 
           <div class="space-top"></div>
