--- a/src/app/rental/rental-new/rental-new.component.html
+++ b/src/app/rental/rental-new/rental-new.component.html
@@ -128,6 +128,18 @@
           </div>
 
           <div class="form-group">
+            <label>60min image</label>
+            <div class="row">
+                <div class="col-md-10 ml-auto mr-auto">
+                    <!-- <app-image-upload></app-image-upload> -->
+                    <app-image-upload-myver 
+                        (imageUploaded)="newRental.course60img=$event"
+                        >
+                    </app-image-upload-myver>
+                </div>
+            </div>
+          </div>
+          <div class="form-group">
               <label>Course 60 description（必須）</label>
               <textarea 
                   class="form-control textarea-limited" 
