--- a/src/app/rental/rental-edit/rental-edit.component.html
+++ b/src/app/rental/rental-edit/rental-edit.component.html
@@ -136,16 +136,15 @@
 
                         <div class="form-group">
                             <label>60min image</label>
-                            <div class="row">
-                                <div class="col-md-10 ml-auto mr-auto">
-                                    <!-- <app-image-upload></app-image-upload> -->
-                                    <app-image-upload-myver 
-                                        [inputImage]="rental.course60img"
-                                        (imageUploaded)="rental.course60img=$event;isTouched=true"
-                                        >
-                                    </app-image-upload-myver>
-                                </div>
-                            </div>
+                            <input [(ngModel)]="rental.course60img"
+                                    name="course60img"
+                                    id="course60img"
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Youtube embeded URLをペーストしてください" 
+                                    maxlength="20" 
+                                    required
+                                    />
                         </div>
 
                         <div class="form-group">
